// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageBar /> General rendering should be empty if no messages have been set 1`] = `
<MessageBar
  classNames={
    {
      "container": null,
      "containerRaised": null,
      "icon": null,
      "message": null,
    }
  }
  messages={[]}
  raised={false}
  showIcons={false}
>
  <div
    className="css-2snd57"
    role={null}
  />
</MessageBar>
`;

exports[`<MessageBar /> General rendering should render a message as info if type is missing 1`] = `
<MessageBar
  classNames={
    {
      "container": null,
      "containerRaised": null,
      "icon": null,
      "message": null,
    }
  }
  messages={
    [
      {
        "message": "something",
      },
    ]
  }
  raised={false}
  showIcons={false}
>
  <div
    className="css-2snd57"
    role="alert"
  >
    <div
      aria-atomic="true"
      aria-live="assertive"
      className="css-v3axxa"
      key="info-something"
    >
      <span
        className="sr-only"
      >
        cart.message_type_info: something
      </span>
      <span
        aria-hidden={true}
        className={null}
      >
        something
      </span>
    </div>
  </div>
</MessageBar>
`;

exports[`<MessageBar /> Multiple messages rendering should render messages without frontend translation 1`] = `
<MessageBar
  classNames={
    {
      "container": null,
      "containerRaised": null,
      "icon": null,
      "message": null,
    }
  }
  messages={
    [
      {
        "message": "This is some information",
        "type": "info",
      },
      {
        "message": "This is an error that happened here.",
        "type": "error",
      },
      {
        "message": "This is just a warning. Nothing to freak out about.",
        "type": "warning",
      },
      {
        "message": "Normal pre-translated message.",
        "translated": null,
      },
      {
        "message": "Normal pre-translated message two.",
        "translated": true,
      },
    ]
  }
  raised={false}
  showIcons={false}
>
  <div
    className="css-2snd57"
    role="alert"
  >
    <div
      aria-atomic="true"
      aria-live="assertive"
      className="css-v3axxa"
      key="info-This is some information"
    >
      <span
        className="sr-only"
      >
        cart.message_type_info: This is some information
      </span>
      <span
        aria-hidden={true}
        className={null}
      >
        This is some information
      </span>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      className="css-4nzmrl"
      key="error-This is an error that happened here."
    >
      <span
        className="sr-only"
      >
        cart.message_type_error: This is an error that happened here.
      </span>
      <span
        aria-hidden={true}
        className={null}
      >
        This is an error that happened here.
      </span>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      className="css-y8hi5f"
      key="warning-This is just a warning. Nothing to freak out about."
    >
      <span
        className="sr-only"
      >
        cart.message_type_warning: This is just a warning. Nothing to freak out about.
      </span>
      <span
        aria-hidden={true}
        className={null}
      >
        This is just a warning. Nothing to freak out about.
      </span>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      className="css-v3axxa"
      key="info-Normal pre-translated message."
    >
      <span
        className="sr-only"
      >
        cart.message_type_info: Normal pre-translated message.
      </span>
      <span
        aria-hidden={true}
        className={null}
      >
        Normal pre-translated message.
      </span>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      className="css-v3axxa"
      key="info-Normal pre-translated message two."
    >
      <span
        className="sr-only"
      >
        cart.message_type_info: Normal pre-translated message two.
      </span>
      <span
        aria-hidden={true}
        className={null}
      >
        Normal pre-translated message two.
      </span>
    </div>
  </div>
</MessageBar>
`;

exports[`<MessageBar /> Multiple messages rendering should translate and render all given messages 1`] = `
<MessageBar
  classNames={
    {
      "container": null,
      "containerRaised": null,
      "icon": null,
      "message": null,
    }
  }
  messages={
    [
      {
        "message": "some.translation.string",
        "translated": false,
      },
      {
        "message": "Message with messageParams",
        "messageParams": {
          "myCustomParam1": "-> TEST-VALUE #1 <-",
          "myCustomParam2": "-> TEST-VALUE #2 <-",
        },
        "translated": false,
      },
    ]
  }
  raised={false}
  showIcons={false}
>
  <div
    className="css-2snd57"
    role="alert"
  >
    <div
      aria-atomic="true"
      aria-live="assertive"
      className="css-v3axxa"
      key="info-some.translation.string"
    >
      <span
        className="sr-only"
      >
        cart.message_type_info: some,translation,,string
      </span>
      <span
        aria-hidden={true}
        className={null}
      >
        some
        translation
        string
      </span>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      className="css-v3axxa"
      key="info-Message with messageParams"
    >
      <span
        className="sr-only"
      >
        cart.message_type_info: Message with messageParams
      </span>
      <span
        aria-hidden={true}
        className={null}
      >
        Message with messageParams
      </span>
    </div>
  </div>
</MessageBar>
`;

exports[`<MessageBar /> should render with custom classNames 1`] = `
<MessageBar
  classNames={
    {
      "container": "cls-container",
      "message": "cls-message",
    }
  }
  messages={
    [
      {
        "message": "This is some information",
      },
    ]
  }
  raised={false}
  showIcons={false}
>
  <div
    className="css-2snd57 cls-container"
    role="alert"
  >
    <div
      aria-atomic="true"
      aria-live="assertive"
      className="css-v3axxa cls-message"
      key="info-This is some information"
    >
      <span
        className="sr-only"
      >
        cart.message_type_info: This is some information
      </span>
      <span
        aria-hidden={true}
        className={null}
      >
        This is some information
      </span>
    </div>
  </div>
</MessageBar>
`;
